--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -4,9 +4,9 @@ description = ''
 authors = []
 telemetry = true
 cache_dir = '.\.cache'
-requirements = []
-[contracts.book]
-path = 'contracts/book.clar'
+
+[contracts.carbonCreditRequirements]
+path = 'contracts/carbonCreditRequirements.clar'
 clarity_version = 2
 epoch = 2.4
 [repl.analysis]
