--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,12 +1,12 @@
 [project]
-name = 'myproject'
+name = 'backend'
 description = ''
 authors = []
 telemetry = true
 cache_dir = '.\.cache'
-
-[contracts.carbonCreditRequirements]
-path = 'contracts/carbonCreditRequirements.clar'
+requirements = []
+[contracts.ect]
+path = 'contracts/ect.clar'
 clarity_version = 2
 epoch = 2.4
 [repl.analysis]
